--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,14 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_menu_send" />
+    <TextView
+        android:paddingLeft="160dp"
+        android:paddingTop="360dp"
+        android:id="@+id/tv_speed"
+        android:textSize="24sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="0 km/h" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
